<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/deep_space_gradiant"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".view.HomeScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginTop="@dimen/dp_10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@drawable/edit_text_background"
            android:padding="@dimen/dp_5">

            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/city_search_box_hint"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_10"
                android:textColor="@color/deep_sky"/>

            <ImageButton
                android:id="@+id/getWeaterButton"
                android:layout_width="@dimen/dp_50"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_search_24" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tvDateTime"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/location"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_35"/>

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/ivWeather"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dp_30"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/time_date"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>

        <ImageView
            android:id="@+id/ivWeather"
            android:layout_width="@dimen/dp_180"
            android:layout_height="@dimen/dp_180"
            android:layout_centerInParent="true"
            android:src="@drawable/sun" />

        <TextView
            android:id="@+id/tvCurrentTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivWeather"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/demo_weather"
            android:textSize="@dimen/sp_50"
            android:layout_marginTop="@dimen/dp_10"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/tvWeaterDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCurrentTemperature"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/current_weather_description"
            android:layout_marginTop="@dimen/dp_5"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_50">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_20"
            android:background="@color/editTextColor1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="0.9">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivSunrise"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/sunrise_filled"
                    android:tint="@color/colorWhite"/>

                <TextView
                    android:id="@+id/tvSunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/sunrise_textView"
                    android:layout_below="@+id/ivSunrise"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_16"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@color/editTextColor1" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivWind"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/wind"
                    android:tint="@color/colorWhite"/>

                <TextView
                    android:id="@+id/tvWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/ivWind"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/wind_textView"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_16"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:background="@color/editTextColor1" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivFeelsLike"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/temperature"
                    android:tint="@color/colorWhite"
                    android:padding="@dimen/dp_10"/>

                <TextView
                    android:id="@+id/tvFeelsLike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/ivFeelsLike"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/feels_like_textView"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_16"/>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>