<resources>
    <string name="app_name">OpenWeather</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="location">City</string>
    <string name="time_date">Time and date will appear here</string>
    <string name="demo_weather">0°C</string>
    <string name="current_weather_description">Current weather description will appear here</string>
    <string name="city_search_box_hint">Enter city name</string>
    <string name="sunrise_textView">Sunrise</string>
    <string name="wind_textView">Wind</string>
    <string name="feels_like_textView">Feels Like</string>
    <string name="alert_title">Alert !</string>
    <string name="alert_message">Alert message</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">Negative Button</string>
    <string name="invalid_city_name">Please enter city name</string>
    <string name="location_error">Unable to find location</string>

</resources>